新增html作業1表格

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body> 
     <a href="/html_CSS_Homework/Day01HW01Table.html">作業1 table</a>
+    <a href="">作業2 Cuttin作業2 Cutting cat</a>
 </body>
 </html>
