--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body> 
     <a href="/html_CSS_Homework/Day01HW01Table.html">作業1 table</a>
-    <a href="">作業2 Cuttin作業2 Cutting cat</a>
+    <a href="">作業2 Cutting cat</a>
 </body>
 </html>
