--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        *{
+            text-decoration: none;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 22px;
+        }
+    </style>
 </head>
 <body> 
-    <a href="/html_CSS_Homework01_Table/Day01HW01Table.html">作業1 table</a>
-    <a href="">作業2 Cutting cat</a>
+    <a href="/0524_01_table/0524_01_table.html">作業1 table</a><br>
+    <a href="/0524_02_Cutting Anilove/0524_02_Cutting Anilove.html">作業2 Cutting cat</a>
 </body>
 </html>
