Update 0524 Cutting Anilove & 0601 google font

--- a/0524_02_Cutting Anilove/0524_02_Cutting Anilove.html
+++ b/0524_02_Cutting Anilove/0524_02_Cutting Anilove.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cutting Anilove</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="CuttingAnilove.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -31,8 +32,9 @@
 <body>
     <div class="NavArea">
         <div class="NavLeft">
-            <div class="logo"> <img src="/HW02Assets/asset 0.png" alt="Anilove log"></div>
-            <div class="Name"><b>Anilove</b></div>            
+            <div class="logo"> <img src="./HW02Assets/asset 0.png" alt="Anilove log"></div>
+            <a href="./0524_02_Cutting Anilove.html" class="Name">Anilove</a>
+            <!-- <div ><b>Anilove</b></div>             -->
         </div>
         <div class="NavMeddle">
             <a href="http://" class="menu">Home</a>
@@ -53,8 +55,9 @@
     </div>
 
     <div class="main-page-02">
-        <div>
-            <img src="/HW02Assets/asset 1.jpeg" alt="">
+        <div class="pic">
+            <img src="./HW02Assets/asset 1.jpeg" alt="cute dog">
+
         </div>
         <div class="main-page-02-text">
             <p class="sentence-01">About Us</p>
