--- a/index.html
+++ b/index.html
@@ -4,17 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homework</title>
     <style>
         *{
             text-decoration: none;
             font-family: Arial, Helvetica, sans-serif;
             font-size: 22px;
+            line-height: 1.5;
+            color: darksalmon;
+        }
+        h3{
+            color:yellowgreen;
         }
     </style>
 </head>
 <body> 
-    <a href="/0524_01_table/0524_01_table.html">作業1 table</a><br>
-    <a href="/0524_02_Cutting Anilove/0524_02_Cutting Anilove.html">作業2 Cutting cat</a>
+    <H3>html CSS homework</H3>
+    <ul>
+        <li><a href="./0524_01_table/0524_01_table.html">0524 table</a><br></li>
+        <li><a href="./0524_02_Cutting Anilove/0524_02_Cutting Anilove.html">0524 Cutting cat</a><br></li>
+        <li><a href="./0601_01_google fonts/0601_01_google fonts.html">0601 google font</a></li>
+    </ul>
+
 </body>
 </html>
