update Anilove & triangle

--- a/0524_02_Cutting Anilove/0524_02_Cutting Anilove.html
+++ b/0524_02_Cutting Anilove/0524_02_Cutting Anilove.html
@@ -30,19 +30,21 @@
     
 </header>
 <body>
-    <div class="NavArea">
-        <div class="NavLeft">
-            <div class="logo"> <img src="./HW02Assets/asset 0.png" alt="Anilove log"></div>
-            <a href="./0524_02_Cutting Anilove.html" class="Name">Anilove</a>
+    <div class="NavArea-bg">
+        <div class="NavArea">
+            <div class="NavLeft">
+                <div class="logo"> <img src="./HW02Assets/asset 0.png" alt="Anilove log"></div>
+                <a href="./0524_02_Cutting Anilove.html" class="Name">Anilove</a>
+            </div>
+            <div class="NavMeddle">
+                <a href="http://" class="menu">Home</a>
+                <a href="http://" class="menu">About</a>
+                <a href="http://" class="menu">Events</a>
+                <a href="http://" class="menu">News</a>
+                <a href="http://" class="menu">Contracts</a>
+            </div>
+            <a href="" class="NavRight">DONATE NOW!</a>
         </div>
-        <div class="NavMeddle">
-            <a href="http://" class="menu">Home</a>
-            <a href="http://" class="menu">About</a>
-            <a href="http://" class="menu">Events</a>
-            <a href="http://" class="menu">News</a>
-            <a href="http://" class="menu">Contracts</a>
-        </div>
-        <a href="" class="NavRight">DONATE NOW!</a>
     </div>
     <div class="main-page-01">
         <div class="main-page-01-text">
@@ -51,20 +53,21 @@
             <p class="sentence-03">You can chip in with money & effort!</p>    
             <a href="" class="button-01">DONATE NOW!</a>
         </div>
-    </div>
+    </div> 
 
-    <div class="main-page-02">
-        <div class="pic">
-            <img src="./HW02Assets/asset 1.jpeg" alt="cute dog">
-
-        </div>
-        <div class="main-page-02-text">
-            <p class="sentence-01">About Us</p>
-            <p class="sentence-02">What Makes Us Care About Pets?</p>
-            <p class="sentence-03">If it wasn’t for our founder’s childhood spent on a ranch in northern Texas, surrounded by domestic animals and pets all the time till she went to college – there might have been no Anilove animal shelter now. So as soon as she graduated with her Veterinary degree 12 years ago, she already knew what she will be doing for a living.</p>
-            <br>  
-            <p class="sentence-03">All in all, with thousands of animals saved off the streets and cared for every year, we hope to encourage much more pet adoptions to happen!</p>
-            <p class="button-01">LEARN MORE</p>
+    <div class="main-page-02-bg">
+        <div class="main-page-02">
+            <div class="pic">
+                <!-- <img src="./HW02Assets/asset 1.jpeg" alt="cute dog"> -->
+            </div>
+            <div class="main-page-02-text">
+                <p class="sentence-01">About Us</p>
+                <p class="sentence-02">What Makes Us Care About Pets?</p>
+                <p class="sentence-03">If it wasn’t for our founder’s childhood spent on a ranch in northern Texas, surrounded by domestic animals and pets all the time till she went to college – there might have been no Anilove animal shelter now. So as soon as she graduated with her Veterinary degree 12 years ago, she already knew what she will be doing for a living.</p>
+                <br>
+                <p class="sentence-03">All in all, with thousands of animals saved off the streets and cared for every year, we hope to encourage much more pet adoptions to happen!</p>
+                <p class="button-01">LEARN MORE</p>
+            </div>
         </div>
     </div>
     <div class="main-page-03">
@@ -74,9 +77,9 @@
         </div>
         <div class="wrap">
             <div class="card-list">
-            <div class="card card-1"><p class="card-1-p">Volunteer</p></div>
-            <div class="card card-2"><p class="card-2-p">Adopt</p></div>
-            <div class="card card-3"><p class="card-3-p">Sponsor</p></div>
+                <div class="card card-1"><p class="card-1-p">Volunteer</p></div>
+                <div class="card card-2"><p class="card-2-p">Adopt</p></div>
+                <div class="card card-3"><p class="card-3-p">Sponsor</p></div>
             </div>
             
         </div>
