--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a href="./0524_01_table/0524_01_table.html">0524 table</a><br></li>
         <li><a href="./0524_02_Cutting Anilove/0524_02_Cutting Anilove.html">0524 Cutting cat</a><br></li>
         <li><a href="./0601_01_google fonts/0601_01_google fonts.html">0601 google font</a></li>
+        <li><a href="./0601_02_triangle/0601_02_triangle.html">0601 triangle</a></li>
     </ul>
 
 </body>
