--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     </style>
 </head>
 <body> 
-    <H3>html CSS homework</H3>
+    <H3>html CSS Homework</H3>
     <ul>
         <li><a href="./0524_01_table/0524_01_table.html">0524 table</a><br></li>
-        <li><a href="./0524_02_Cutting Anilove/0524_02_Cutting Anilove.html">0524 Cutting cat</a><br></li>
+        <li><a href="./0524_02_Cutting Anilove/0524_02_Cutting Anilove.html">0524 Cutting Anilove</a><br></li>
+        <li><a href="./0529_01_Cutting Shopline/0529_01_Cutting Shopline.html">0529 Cutting Shopline</a><br></li>
         <li><a href="./0601_01_google fonts/0601_01_google fonts.html">0601 google font</a></li>
         <li><a href="./0601_02_triangle/0601_02_triangle.html">0601 triangle</a></li>
     </ul>
