Add Guess Number

--- a/index.html
+++ b/index.html
@@ -29,5 +29,9 @@
         <li><a href="./0605_01_Cutting Toyota/0605_01_Cutting Toyota.html">0605 Cutting Toyota</a></li>
     </ul>
 
+    <H3>JavaScript Homework</H3>
+    <ul>
+        <li><a href="./0606_01_Guess Number/GuessNumber.html">0606 Guess Number</a></li>
+    </ul>
 </body>
 </html>
