Add RWD homework, update Guess number typo

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li><a href="./0601_01_google fonts/0601_01_google fonts.html">0601 google font</a></li>
         <li><a href="./0601_02_triangle/0601_02_triangle.html">0601 triangle</a></li>
         <li><a href="./0605_01_Cutting Toyota/0605_01_Cutting Toyota.html">0605 Cutting Toyota</a></li>
+        <li><a href="./0609_01_RWD/0609_RWD.html">0609 RWD exercise</a></li>
     </ul>
 
     <H3>JavaScript Homework</H3>
