--- a/0606_01_Guess Number/GuessNumber.html
+++ b/0606_01_Guess Number/GuessNumber.html
@@ -95,7 +95,7 @@
     <script>
 
         const ansNum = Math.round(Math.random() * 99);
-        document.write("<br>公測版，先大家看答案去試試<br>答案:  " + ansNum)
+        document.write("<br>公測版，先讓大家看答案去試試幫忙debug<br>答案:  " + ansNum)
         // 解除上行註解可以show答案在html上
 
         //取得需要的DOM
