--- a/0609_01_RWD/0609_RWD.html
+++ b/0609_01_RWD/0609_RWD.html
@@ -7,6 +7,8 @@
     <title>RWD exercise</title>
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./Style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/yakuhanjp@3.3.1/dist/css/yakuhanjp.min.css">
 </head>
 
 <body>
@@ -15,8 +17,10 @@
             <div class="item">
                 <H4>旅行者にできること<br><span>What Travelers Can Do</span></H4>
             </div>
-            <div class="link">
-                <a href="http://">すべて見る</a>
+            <div class="more">
+                <a href="http://">すべて見る
+                <i class="fa-regular fa-circle-right"></i>
+                </a>
             </div>
         </div>
 
@@ -40,7 +44,7 @@
         <div class="sub-card-area">
             <a href="http://"  class="sub-card-url">
                 <div class="sub-card">
-                    <div class="card-dir">エコ活動</div>
+                    <div class="card-dir"><img src="./Assets/icon_eco.svg" alt="">エコ活動</div>
                     <div class="sub-card-pic">
                         <img src="./Assets/traveler02.webp" alt="">
                     </div>
@@ -52,7 +56,7 @@
             </a>
             <a href="" class="sub-card-url">
                 <div class="sub-card">
-                    <div class="card-dir">イベント</div>
+                    <div class="card-dir"><img src="./Assets/icon_event.svg" alt="">イベント</div>
                     <div class="sub-card-pic">
                         <img src="./Assets/traveler03.webp" alt="">
                     </div>
@@ -64,7 +68,7 @@
             </a>
             <a href="" class="sub-card-url">
                 <div class="sub-card">
-                    <div class="card-dir">その他</div>
+                    <div class="card-dir"><img src="./Assets/icon_other.svg" alt="">その他</div>
                     <div class="sub-card-pic">
                         <img src="./Assets/traveler04.webp" alt="">
                     </div>
@@ -76,7 +80,7 @@
             </a>
             <a href="" class="sub-card-url">
                 <div class="sub-card">
-                    <div class="card-dir">カルチャー</div>
+                    <div class="card-dir"><img src="./Assets/icon_culture.svg" alt="">カルチャー</div>
                     <div class="sub-card-pic">
                         <img src="./Assets/traveler05.webp" alt="">
                     </div>
@@ -93,8 +97,10 @@
             <div class="item">
                 <H4>企業の取組み<br><span>Corporate Initiatives</span></H4>
             </div>
-            <div class="link">
-                <a href="http://">すべて見る</a>
+            <div class="more">
+                <a href="http://">すべて見る
+                <i class="fa-regular fa-circle-right"></i>
+                </a>
             </div>
         </div>
 
@@ -155,7 +161,7 @@
             </a>
             <a href="" class="sub-card-url">
                 <div class="sub-card">
-                    <div class="card-dir">ザ・リッツカールトン・レジデン</div>
+                    <div class="card-dir">ザ・リッツカールトン・レジデンス・ワイキ</div>
                     <div class="sub-card-pic">
                         <img src="./Assets/Corporate05.webp" alt="">
                     </div>
@@ -172,8 +178,10 @@
             <div class="item">
                 <H4>ハワイ州観光局の取組み<br><span>Hawai‘i Tourism Japan Initiatives</span></H4>
             </div>
-            <div class="link">
-                <a href="http://">すべて見る</a>
+            <div class="more">
+                <a href="http://">すべて見る
+                <i class="fa-regular fa-circle-right"></i>
+                </a>
             </div>
         </div>
 
@@ -251,8 +259,10 @@
             <div class="item">
                 <H4>コミュニティの取り組み<br><span>Communitiy Initiatives</span></H4>
             </div>
-            <div class="link">
-                <a href="http://">すべて見る</a>
+            <div class="more">
+                <a href="http://">すべて見る
+                <i class="fa-regular fa-circle-right"></i>
+                </a>
             </div>
         </div>
 
@@ -276,7 +286,7 @@
         <div class="sub-card-area">
             <a href="http://"  class="sub-card-url">
                 <div class="sub-card">
-                    <div class="card-dir">サスティナブル・コーストライン</div>
+                    <div class="card-dir">サスティナブル・コーストラインズ・ハワイ（Sustainable</div>
                     <div class="sub-card-pic">
                         <img src="./Assets/Communitiy02.webp" alt="">
                     </div>
