--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
 <body> 
     <H3>html CSS Homework</H3>
     <ul>
-        <li><a href="./0524_01_table/0524_01_table.html">0524 table</a><br></li>
+        <li><a href="./0524_01_table/0524_01_table.html">0524 Table</a><br></li>
         <li><a href="./0524_02_Cutting Anilove/0524_02_Cutting Anilove.html">0524 Cutting Anilove</a><br></li>
         <li><a href="./0529_01_Cutting Shopline/0529_01_Cutting Shopline.html">0529 Cutting Shopline</a><br></li>
-        <li><a href="./0601_01_google fonts/0601_01_google fonts.html">0601 google font</a></li>
-        <li><a href="./0601_02_triangle/0601_02_triangle.html">0601 triangle</a></li>
+        <li><a href="./0601_01_google fonts/0601_01_google fonts.html">0601 Google font</a></li>
+        <li><a href="./0601_02_triangle/0601_02_triangle.html">0601 Triangle</a></li>
         <li><a href="./0605_01_Cutting Toyota/0605_01_Cutting Toyota.html">0605 Cutting Toyota</a></li>
         <li><a href="./0609_01_RWD/0609_RWD.html">0609 RWD exercise</a></li>
+        <li><a href="./0614_01_grid/0614_01_grid.html">0614 Bootstrap grid exercise</a></li>
     </ul>
 
     <H3>JavaScript Homework</H3>
