--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <ul>
         <li><a href="./0606_01_Guess Number/GuessNumber.html">0606 Guess Number</a></li>
         <li><a href="./0615_01_MarketingShare/MarketingShare.html">0615 Marketing Share</a></li>
+        <li><a href="./0615_01_LOL/LOL.html">0615 LOL</a></li>
     </ul>
 </body>
 </html>
