--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         <li><a href="./0606_01_Guess Number/GuessNumber.html">0606 Guess Number</a></li>
         <li><a href="./0615_01_MarketingShare/MarketingShare.html">0615 Marketing Share</a></li>
         <li><a href="./0615_01_LOL/LOL.html">0615 LOL</a></li>
+        <li><a href="./0619_01_1A2B/Guess1A2B.html">0619 1A2B Game</a></li>
+
     </ul>
 </body>
 </html>
