update Apple price cal

--- a/0628_01_Apple/Apple_3products.html
+++ b/0628_01_Apple/Apple_3products.html
@@ -17,11 +17,11 @@
 <body>
       <div class="container">
           <div class="row">
-            <div class="col-12 d-flex justify-content-center">
-              <nav class="nav">
-                <a class="nav-link active" aria-current="page" href="#" type = button onclick="initialize(this.innerText)" id="iPad-page">iPad</a>
-                <a class="nav-link" href="#" type = button onclick="initialize(this.innerText)" id="iPhone-page">iPhone</a>
-                <a class="nav-link" href="#" type = button onclick="initialize(this.innerText)" id="Mac-page">Mac</a>
+            <div class="col-12 d-flex justify-content-center mb-5">
+              <nav class="nav display-6">
+                <a class="nav-link active text-primary" aria-current="page" href="#" type = button onclick="initialize(this.innerText)" id="iPad-page">iPad</a>
+                <a class="nav-link text-warning " href="#" type = button onclick="initialize(this.innerText)" id="iPhone-page">iPhone</a>
+                <a class="nav-link text-info" href="#" type = button onclick="initialize(this.innerText)" id="Mac-page">Mac</a>
               </nav>
             </div>
 
@@ -30,20 +30,20 @@
   <section>
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <H1 class="display-4">購買 iPad Air</H1>
-      <p class="lead">NT$19,900起</p>
+      <H1 class="display-4">購買 Apple 系列產品</H1>
+      <p class="lead"></p>
     </div>
   </div>
   <div class="container position-relative">
     <div class="row">
       <div class="col-8 pic-area position-sticky sticky-top">
-        <img src="" alt="" class="w-100 main-pic">
+        <img src="./pic/SnapdragonNEW.webp" alt="" class="w-100 main-pic">
       </div>
       <div class="col-4 spec-area">
         <div class="d-flex flex-wrap gap-3 mb-5" id="color">
-          <H3>外觀。挑選喜愛的顏色。</H3>
-          <button class="col-5 btn border border-2 rounded text-center color-card" id="gray">
-            <img src="./pic/iPad//dot-spacegray.jpg" alt="" class="w-50 p-3"><br>太空灰色</button>
+          <H3></H3>
+          <!-- <button class="col-5 btn border border-2 rounded text-center color-card" id="gray">
+            <img src="./pic/iPad//dot-spacegray.jpg" alt="" class="w-50 p-3"><br>太空灰色</button> -->
           <!-- <button class="col-5 btn border border-2 rounded text-center card" id="blue">
             <img src="./pic/ipad-air-finish-blue-2022.png" alt="" class="w-50 p-3"><br>藍色</button>
           <button class="col-5 btn border border-2 rounded text-center card" id="pink">
@@ -54,30 +54,30 @@
             <img src="./pic/ipad-air-finish-starlight-2022.png" alt="" class="w-50 p-3"><br>星光色</button> -->
         </div>
         <div class="d-flex flex-wrap gap-3 mb-5" id="spec-1">
-          <H3>儲存裝置。 選擇需要的儲存空間大小。</H3>
-          <button class="col-5 btn border border-2 rounded text-center" id="GB-64">
+          <!-- <H3>儲存裝置。 選擇需要的儲存空間大小。</H3>
+          <button class="col-5 btn border border-2 rounded text-center spec-card" id="GB-64">
             <H4>64GB</H4><br>
             <p>NT$19,990起</p>
           </button>
-          <button class="col-5 btn border border-2 rounded text-center" id="GB-256">
+          <button class="col-5 btn border border-2 rounded text-center spec-card" id="GB-256">
             <H4>256GB</H4><br>
             <p>NT$24,990起</p>
-          </button>
+          </button> -->
         </div>
         <div class="d-flex flex-wrap gap-3 mb-5" id="spec-2">
-          <H3>連線能力。 選擇連線方式。</H3>
-          <button class="col-5 btn border border-2 rounded text-center" id="Wi-Fi">
+          <!-- <H3>連線能力。 選擇連線方式。</H3>
+          <button class="col-5 btn border border-2 rounded text-center spec-card" id="Wi-Fi">
             <H4>Wi-Fi</H4><br>
             <p>每部 iPad 都可連接到 Wi-Fi 網路，使你能保持連線。
               NT$19,990起</p>
           </button>
-          <button class="col-5 btn border border-2 rounded text-center" id="Cellular">
+          <button class="col-5 btn border border-2 rounded text-center spec-card" id="Cellular">
             <H4>Wi-Fi + 行動網路機型</H4><br>
             <p>讓你在無法使用 Wi-Fi 時也能進行連線。NT$24,990起</p>
-          </button>
+          </button> -->
         </div>
         <div id="price" class="mb-5">
-          <H2>NT$ 0</H2>
+          <!-- <H2></H2> -->
         </div>
       </div>
     </div>
