Update Apple Add Calender

--- a/0628_01_Apple/Apple_3products.html
+++ b/0628_01_Apple/Apple_3products.html
@@ -36,13 +36,13 @@
   </div>
   <div class="container position-relative">
     <div class="row">
-      <div class="col-8 pic-area position-sticky sticky-top">
+      <div class="col-12 pic-area position-sticky sticky-top">
         <img src="./pic/SnapdragonNEW.webp" alt="" class="w-100 main-pic">
       </div>
       <div class="col-4 spec-area">
         <div class="d-flex flex-wrap gap-3 mb-5" id="color">
-          <H3></H3>
-          <!-- <button class="col-5 btn border border-2 rounded text-center color-card" id="gray">
+          <!-- <H3></H3>
+          <button class="col-5 btn border border-2 rounded text-center color-card" id="gray">
             <img src="./pic/iPad//dot-spacegray.jpg" alt="" class="w-50 p-3"><br>太空灰色</button> -->
           <!-- <button class="col-5 btn border border-2 rounded text-center card" id="blue">
             <img src="./pic/ipad-air-finish-blue-2022.png" alt="" class="w-50 p-3"><br>藍色</button>
