update Apple & Calendar

--- a/0628_01_Apple/Apple_3products.html
+++ b/0628_01_Apple/Apple_3products.html
@@ -36,8 +36,8 @@
   </div>
   <div class="container position-relative">
     <div class="row">
-      <div class="col-12 pic-area position-sticky sticky-top">
-        <img src="./pic/SnapdragonNEW.webp" alt="" class="w-100 main-pic">
+      <div class="col-12 pic-area position-sticky sticky-top text-center">
+        <img src="./pic/SnapdragonNEW.webp" alt="" class="w-50 main-pic  ">
       </div>
       <div class="col-4 spec-area">
         <div class="d-flex flex-wrap gap-3 mb-5" id="color">
