Calendar correct next month date

--- a/0628_02_Calender/Calendar.html
+++ b/0628_02_Calender/Calendar.html
@@ -386,7 +386,7 @@
                     
                     else if (day > dateOfMonth) 
         
-                         if(nextMonthDate < allDays-dateOfMonth){
+                         if(nextMonthDate <= weeks*7-allDays){
                         tdDOM.classList.add('text-secondary')
                         tdDOM.innerText = nextMonthDate
                         nextMonthDate++
