--- a/0711_01_LittleMary/LittleMary.html
+++ b/0711_01_LittleMary/LittleMary.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Little Mary</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
@@ -33,7 +33,9 @@
         </div>
         <div class="row">
             <div box-id="31" class="col-1">31</div>
-            <div class="col-10"></div>
+            <div class="col-10">
+                <p id="msg"></p>
+            </div>
             <div box-id="14" class="col-1">14</div>
         </div>
         <div class="row">
@@ -67,7 +69,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
-    <script src="./mian.js"></script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
