--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework</title>
+    <title>Little Fun</title>
     <style>
         *{
             text-decoration: none;
@@ -19,24 +19,16 @@
     </style>
 </head>
 <body> 
-    <H3>html CSS Homework</H3>
+    <H3>html CSS </H3>
     <ul>
-        <li><a href="./0524_01_table/0524_01_table.html">0524 Table</a><br></li>
-        <li><a href="./0524_02_Cutting Anilove/0524_02_Cutting Anilove.html">0524 Cutting Anilove</a><br></li>
-        <li><a href="./0529_01_Cutting Shopline/0529_01_Cutting Shopline.html">0529 Cutting Shopline</a><br></li>
-        <li><a href="./0601_01_google fonts/0601_01_google fonts.html">0601 Google font</a></li>
-        <li><a href="./0601_02_triangle/0601_02_triangle.html">0601 Triangle</a></li>
-        <li><a href="./0605_01_Cutting Toyota/0605_01_Cutting Toyota.html">0605 Cutting Toyota</a></li>
-        <li><a href="./0609_01_RWD/0609_RWD.html">0609 RWD exercise</a></li>
-        <li><a href="./0614_01_grid/0614_01_grid.html">0614 Bootstrap grid exercise</a></li>
-        <li><a href="./0621_01_Shopline RWD/0621_01_Shopline RWD.html">0621 Shopline RWD</a></li>
+        <li><a href="./0605_01_Cutting Toyota RWD/0605_01_Cutting Toyota.html">Toyota RWD</a></li>
+        <li><a href="./0609_01_RWD/0609_RWD.html">0609 Travelers RWD</a></li>
     </ul>
 
-    <H3>JavaScript Homework</H3>
+    <H3>JavaScript little fun</H3>
     <ul>
         <li><a href="./0606_01_Guess Number/GuessNumber.html">0606 Guess Number</a></li>
         <li><a href="./0615_01_MarketingShare/MarketingShare.html">0615 Marketing Share</a></li>
-        <li><a href="./0615_01_LOL/LOL.html">0615 LOL</a></li>
         <li><a href="./0619_01_1A2B/Guess1A2B.html">0619 1A2B Game</a></li>
         <li><a href="./0628_01_Apple/Apple_3products.html">0628 Apple</a></li>
         <li><a href="./0628_02_Calender/Calendar.html">0628 Calender</a></li>
