--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body> 
     <H3>html CSS </H3>
     <ul>
-        <li><a href="./0605_01_Cutting Toyota RWD/0605_01_Cutting Toyota.html">Toyota RWD</a></li>
+        <li><a href="./0605_01_Cutting Toyota/0605_01_Cutting Toyota.html">Toyota RWD</a></li>
         <li><a href="./0609_01_RWD/0609_RWD.html">0609 Travelers RWD</a></li>
     </ul>
 
