--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 <body> 
     <H3>html CSS </H3>
     <ul>
-        <li><a href="./0605_01_Cutting Toyota/0605_01_Cutting Toyota.html">Toyota RWD</a></li>
+        <li><a href="./0605_01_Cutting Toyota/0605_01_Cutting Toyota.html">Toyota Show</a></li>
         <li><a href="./0609_01_RWD/0609_RWD.html">0609 Travelers RWD</a></li>
     </ul>
 
-    <H3>JavaScript little fun</H3>
+    <H3>JavaScript Little Fun</H3>
     <ul>
         <li><a href="./0606_01_Guess Number/GuessNumber.html">0606 Guess Number</a></li>
         <li><a href="./0615_01_MarketingShare/MarketingShare.html">0615 Marketing Share</a></li>
