--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
     <H3>html CSS </H3>
     <ul>
         <li><a href="./0605_01_Cutting Toyota/0605_01_Cutting Toyota.html">Toyota Show</a></li>
-        <li><a href="./0609_01_RWD/0609_RWD.html">0609 Travelers RWD</a></li>
+        <li><a href="./0609_01_RWD/0609_RWD.html">Travelers RWD</a></li>
     </ul>
 
     <H3>JavaScript Little Fun</H3>
     <ul>
-        <li><a href="./0606_01_Guess Number/GuessNumber.html">0606 Guess Number</a></li>
-        <li><a href="./0615_01_MarketingShare/MarketingShare.html">0615 Marketing Share</a></li>
-        <li><a href="./0619_01_1A2B/Guess1A2B.html">0619 1A2B Game</a></li>
-        <li><a href="./0628_01_Apple/Apple_3products.html">0628 Apple</a></li>
-        <li><a href="./0628_02_Calender/Calendar.html">0628 Calender</a></li>
-        <li><a href="./0711_01_LittleMary/LittleMary.html">0711 Little Mary</a></li>
-        <li><a href="./0718_01_ToDoList/ToDoList.html">0718 Todo List</a></li>
+        <li><a href="./0606_01_Guess Number/GuessNumber.html">Guess Number</a></li>
+        <li><a href="./0615_01_MarketingShare/MarketingShare.html">Marketing Share</a></li>
+        <li><a href="./0619_01_1A2B/Guess1A2B.html">1A2B Game</a></li>
+        <li><a href="./0628_01_Apple/Apple_3products.html">Apple</a></li>
+        <li><a href="./0628_02_Calender/Calendar.html">Calender</a></li>
+        <li><a href="./0711_01_LittleMary/LittleMary.html">Little Mary</a></li>
+        <li><a href="./0718_01_ToDoList/ToDoList.html">Todo List</a></li>
 
     </ul>
 </body>
